--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "posttest": "yarn lint",
     "prepack": "tsc -b --clean && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc --extension .ts mocha -r ts-node/register --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif-dev readme && git add README.md",
+    "postinstall": "tsc"
   },
   "types": "lib/index.d.ts"
 }
